# SSAA

./: .gitignoge  .gitignore  CHANGELOG.md  Don Melchor.ssaa  Don Melchor.ssaa.json  El Guindal (3).ssaa  El Guindal (4).ssaa  El Guindal.ssaa  FREEZE.md  INSTRUCCIONES_LICENCIA.md  LICENSE  LICENSING_TODO.md  MANIFEST.in  README.md  SCALABILITY_GUIDE.md  __init__.py  consumos.lib  data_model.py  main.py  pyproject.toml  requirements.txt  ssaa_settings.example.json  version.json
app/: __init__.py  base_controller.py  bootstrap.py  config.py  controller.py  deps.py  dirty_tracker.py  events.py  paths.py  section_catalog.py  section_registry.py  sections.py  version.py
cabinet/: entity.py  lifecycle.py  model.py  pipeline.py  validators.py
core/: __init__.py  keys.py  sections.py  types.py
docs/: ARCHITECTURE.md  ARRANQUE_Y_CONTRATOS.md  CIERRE_ETAPA1.md  PACKAGING_WINDOWS.md  PYINSTALLER_WINDOWS.md  UX_MANUAL_CHECKLIST.md
domain/: bank_charger_engine.py  battery.py  cc_consumption.py  ieee485.py  parse.py  project_facade.py  selection.py  ssaa_topology.py
infra/: crash_handler.py  logging_setup.py  migrations.py  paths.py  perf.py  settings.py  text_encoding.py
resources/: component_database.json  consumos.lib  consumos_ejemplo.lib  materiales_ejemplo.lib  materiales_updated_2.lib  styles.qss  theme.json  theme_dark.json  theme_light.json
screens/: base.py
scripts/: README.md  build_pyinstaller.ps1  build_windows.ps1  check_architecture.py  check_syntax.py  release_check.ps1
services/: __init__.py  bank_charger_service.py  calc_service.py  calculations.py  (+10 more)
(+179 files in other folders)
